+Update: update z-index sidebar-profile to fix conflicts with the mega-menu

--- a/Resources/scss/menu.scss
+++ b/Resources/scss/menu.scss
@@ -6,7 +6,7 @@
   top: 0;
   height: 100%;
   width:250px;
-  z-index:1049;
+  z-index:999;
   overflow-y: auto  ;
   background-color:#f5f5f5;transition: all 0.5s  ease-in-out; }
 .bg-default{background-color:#e4e4e4;}
